-added styling to bin page -added styling to user page -added styling to task -bugfix -added styling to field page -added styling to graph page -added Icon -Updated Icon -bugfix -general UI spacing -more UI spacing

--- a/src/main/resources/user.css
+++ b/src/main/resources/user.css
@@ -40,7 +40,6 @@
     -fx-font-size: 28px;
     -fx-font-weight: bold;
     -fx-text-fill: #3498db;
-    -fx-background-color: GREEN;
     -fx-padding: 10 0;
 }
 
@@ -63,7 +62,6 @@
 
 .center-label {
     -fx-alignment: CENTER;
-    -fx-background-color: LIGHTYELLOW;
 }
 
 .pad-label {
